

#
# Added 13/06/13
#

#: site/dashboard/top10_percentage.php
#: site/dashboard/top10_hosts.php
msgid "No IPv4 hosts configured"
msgstr ""

#: site/dashboard/top10_hosts.php
msgid "No IPv6 hosts configured"
msgstr ""

#: site/dashboard/top10_percentage.php
msgid "Add some hosts to subnets to calculate usage percentage"
msgstr ""

#: site/dashboard/top10_hosts.php
msgid "Add some hosts to subnets to show graph of used hosts per subnet"
msgstr ""


#
# Added 14/06/13
#

#: site/admin/usersEditPrint.php
msgid "edit user"
msgstr""

#: site/admin/usersEditPrint.php
msgid "delete user"
msgstr ""

#
# Added 20/06/13
#

#: site/admin/manageSubnetEdit.php
msgid "Check hosts status"
msgstr ""

#: site/admin/manageSubnetEdit.php
msgid "Ping hosts inside subnet to check avalibility"
msgstr ""

#: site/ipaddr/subnetDetials.php
msgid "Hosts check"
msgstr ""

#: site/ipaddr/modifyIpAddress.php
msgid "Ping exclude"
msgstr ""

#: site/ipaddr/modifyIpAddress.php
msgid "Exclude from ping status checks"
msgstr ""

#: site/ipaddr/ipAddressPrintTable.php
msgid "Check avalibility"
msgstr ""

#: site/ipaddr/pingCheck.php
msgid "Insufficient permissions"
msgstr ""

#: site/ipaddr/pingCheck.php
msgid "is alive"
msgstr ""

#: site/ipaddr/pingCheck.php
msgid "is not alive"
msgstr ""

#: site/admin/settings.php
msgid "Ping status intervals"
msgstr ""

#: site/admin/settings.php
msgid "Ping status intervals for IP addresses in seconds - warning;offline (Default: 1800;3600)"
msgstr ""

#: site/admin/settingsEdit.php
msgid "Invalid ping status intervals"
msgstr ""

#: site/ipaddr/ipAddressPrintTable.php
msgid "Device is alive"
msgstr ""

#: site/ipaddr/ipAddressPrintTable.php
msgid "Device warning"
msgstr ""

#: site/ipaddr/ipAddressPrintTable.php
msgid "Device is offline"
msgstr ""

#: site/ipaddr/ipAddressPrintTable.php
msgid "Device status unknown"
msgstr ""

#: site/ipaddr/ipAddressPrintTable.php
msgid "Last seen"
msgstr ""

#: site/ipaddr/ipAddressPrintTable.php
msgid "Never"
msgstr ""