@@ -2284,7 +2284,7 @@ function getIPaddressesBySwitchName ( $name )
 function pingHost ($ip, $wait=1000, $count="1", $exit=false)
 {
 	//set and execute
-	$cmd = "/sbin/ping -c $count -W $wait -n $ip 1>/dev/null 2>&1";
+	$cmd = "$ping -c $count -W $wait -n $ip 1>/dev/null 2>&1";
     exec($cmd, $output, $retval);
     
     //exit codes
